...
                android:layout_weight="1"
                android:backgroundTint="#00FFFFFF"
                android:paddingEnd="10dp"
                app:srcCompat="@drawable/ic_blinker" />

            <LinearLayout
                android:id="@+id/endGame"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/border_round"
                android:orientation="horizontal"
                android:paddingStart="10dp"
...
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/speedometerIv"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:srcCompat="@drawable/speedometer" />

                <TextView
                    android:id="@+id/speedometerIndicatorTv"
...
