...
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/header" />

        <Button
            android:id="@+id/button_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/button_blue"
            android:fontFamily="@font/holtwood_one_sc"
...
