...
    android:layout_gravity="center"
    android:background="@drawable/border_can"
    android:orientation="vertical"
    android:padding="15dp">

    <ImageView
        android:id="@+id/canID"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:src="@drawable/can" />

...
